# src/routes/hostel.routes.ts
@@ -1,19 +1,29 @@
 import express from 'express';
-
+// @ts-ignore
 import protectRoute from '../middleware/protectRoute.js';
-import { createHostel, getAllGuests, getHostel } from '../controllers/hostel.controllers.js';
+// @ts-ignore
 import { upload } from '../middleware/saveUploads.js';
-import catchAsync from '../utils/catchAsync.js';
+import { HostelController } from '../controllers/hostel.controller.js';
 
 const router = express.Router();
+const hostelController = new HostelController();
 
-// Create a hostel
-router.post('/create', protectRoute, upload.single('photo'), catchAsync(createHostel));
+router.post('/create', protectRoute, upload.single('image'), async (req, res, next) => {
+  try {
+    const result = await hostelController.create(req as any);
+    res.status(201).json(result);
+  } catch (error) {
+    next(error);
+  }
+});
 
-// Get hostel of logged in host user
-router.get('/mine', protectRoute, catchAsync(getHostel));
-
-// Get all guests staying in the hostel
-router.get('/guests', protectRoute, catchAsync(getAllGuests));
+router.put('/update', protectRoute, upload.single('image'), async (req, res, next) => {
+  try {
+    const result = await hostelController.update(req as any);
+    res.status(200).json(result);
+  } catch (error) {
+    next(error);
+  }
+});
 
 export default router;
